Fix see all link margin for grid layout
This was overlapping with the cards

--- a/assets/src/scss/blocks/PostsList/PostsListStyle.scss
+++ b/assets/src/scss/blocks/PostsList/PostsListStyle.scss
@@ -275,10 +275,6 @@
   &.is-custom-layout-grid {
     display: block !important;
 
-    .see-all-link {
-      margin-top: -$sp-1;
-    }
-
     // We don't show tags in this layout because they often break the design.
     .taxonomy-post_tag {
       display: none;
